--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
         
     env: 
         DATABASE_URL: ${{secrets.DATABASE_URL}}
-        JWT_SECRET: ${{secretes.JWT_SECRET}}
+        JWT_SECRET: ${{secrets.JWT_SECRET}}
         NEXT_PUBLIC_BASE_URL: ${{secrets.NEXT_PUBLIC_BASE_URL}}
         NEXT_PUBLIC_ROLE_MASYARAKAT: ${{secrets.NEXT_PUBLIC_ROLE_MASYARAKAT}}
     
@@ -32,7 +32,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    
-    - name: install dependencies
-    
-    - run: npm run build --if-present
+  
+    - run: npm run build
