--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline for Frontend Solutes
 on:
   push:
     branches:
-      - master # Jalankan hanya saat ada perubahan di branch "main"
+      - main # Jalankan hanya saat ada perubahan di branch "main"
 
 jobs:
   build:
