--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,10 +41,9 @@ jobs:
             export NEXT_PUBLIC_ROLE_MASYARAKAT=${{ secrets.NEXT_PUBLIC_ROLE_MASYARAKAT }} 
 
             npm run build
-            pm2 restart 0 --update-env
+            # pm2 restart 0 --update-env
 
             # Save PM2 process list
-            pm2 save
-
+            # pm2 save
 
           EOF
