--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
             cd ksm
             git pull origin main
             npm install
+            npm install -g pm2
             export DATABASE_URL=${{ secrets.DATABASE_URL }} 
             export JWT_SECRET=${{ secrets.JWT_SECRET }} 
             export NEXT_PUBLIC_BASE_URL=${{ secrets.NEXT_PUBLIC_BASE_URL }} 
