--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,15 @@ jobs:
       - name: Deploy to GCP
         run: |
           sshpass -p "${{ secrets.USER_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.USER_VPS }} << 'EOF'
+          
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # Ini memuat nvm
+
+            nvm use 20 # Pastikan menggunakan Node.js versi 20
+            node -v    # Verifikasi versi Node.js
+            npm -v     # Verifikasi versi npm
 
             cd ksm
-            nvm use 20
             git pull origin main
             npm install
             export DATABASE_URL=${{ secrets.DATABASE_URL }} 
