--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Deploy to GCP
         run: |
           sshpass -p "${{ secrets.USER_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.USER_VPS }} << 'EOF'
-          
+
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # Ini memuat nvm
 
@@ -45,6 +45,7 @@ jobs:
             export DATABASE_URL=${{ secrets.DATABASE_URL }} 
             export JWT_SECRET=${{ secrets.JWT_SECRET }} 
             export NEXT_PUBLIC_BASE_URL=${{ secrets.NEXT_PUBLIC_BASE_URL }} 
+            export NEXT_PUBLIC_IMAGE=${{ secrets.NEXT_PUBLIC_IMAGE }} 
             export NEXT_PUBLIC_ROLE_MASYARAKAT=${{ secrets.NEXT_PUBLIC_ROLE_MASYARAKAT }} 
 
             npm run build
