--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
 
             npm run build
             
-            pm2 restart 0 --update-env
+            pm2 restart 0 --watch --update-env
 
             # Save PM2 process list
             pm2 save
