--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,22 +32,20 @@ jobs:
         run: |
           sshpass -p "${{ secrets.USER_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.USER_VPS }} << 'EOF'
 
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # Ini memuat nvm
+            # export NVM_DIR="$HOME/.nvm"
+            # [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # Ini memuat nvm
 
-            nvm use 20 # Pastikan menggunakan Node.js versi 20
+            nvm use 22 # Pastikan menggunakan Node.js versi 20
             node -v    # Verifikasi versi Node.js
             npm -v     # Verifikasi versi npm
 
-            cd ksm
+            cd ksm-kudubisa
             git pull origin main
             npm install
             export DATABASE_URL=${{ secrets.DATABASE_URL }} 
             export JWT_SECRET=${{ secrets.JWT_SECRET }} 
             export NEXT_PUBLIC_BASE_URL=${{ secrets.NEXT_PUBLIC_BASE_URL }} 
-            export NEXT_PUBLIC_IMAGE=${{ secrets.NEXT_PUBLIC_IMAGE }} 
-            export NEXT_PUBLIC_ROLE_MASYARAKAT=${{ secrets.NEXT_PUBLIC_ROLE_MASYARAKAT }} 
-
+            
             npm run build
             
             pm2 restart 0 --update-env
