--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline for Frontend Solutes
+name: Deploy Frontend ke VPS
 
 on:
   push:
@@ -6,51 +6,35 @@ on:
       - main # Jalankan hanya saat ada perubahan di branch "main"
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      # Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Setup Node.js environment
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "20"
-
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout kode dari GitHub
+        uses: actions/checkout@v4
 
-      # Deploy the application to the VPS
-      - name: Deploy to GCP
+      - name: Deploy ke VPS
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+          SERVER_USER: ${{ secrets.SERVER_USER }}
+          PROJECT_DIR: "full-stack-web-pos" # Sesuaikan dengan path proyek di VPS
         run: |
-          sshpass -p "${{ secrets.USER_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.USER_VPS }} << 'EOF'
+          # Setup SSH agar bisa login ke VPS
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
-            # export NVM_DIR="$HOME/.nvm"
-            # [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # Ini memuat nvm
-
-            nvm use 22 # Pastikan menggunakan Node.js versi 20
-            node -v    # Verifikasi versi Node.js
-            npm -v     # Verifikasi versi npm
+          # Jalankan perintah di VPS untuk update aplikasi
+          ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP << 'EOF'
 
             cd ksm-kudubisa
             git pull origin main
+            # rm -rf .next
+
             npm install
-            export DATABASE_URL=${{ secrets.DATABASE_URL }} 
-            export JWT_SECRET=${{ secrets.JWT_SECRET }} 
-            export NEXT_PUBLIC_BASE_URL=${{ secrets.NEXT_PUBLIC_BASE_URL }} 
-            
             npm run build
+            pm2 restart 0
             
-            pm2 restart 0 --update-env
-
-            # Save PM2 process list
-            pm2 save
-
+            echo "Deployment sukses!"
           EOF
